# desktop-waifu

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  flake.nix  index.html  package.json  todo.md  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
assets/Stylized Miku/: RULES.txt
desktop-waifu-overlay/: Cargo.toml
desktop-waifu-overlay/src/: main.rs  server.rs  tray.rs
desktop-waifu-overlay/src/ipc/: mod.rs
packaging/: desktop-waifu.desktop
packaging/aur/: PKGBUILD
packaging/debian/: changelog  control  copyright  rules
packaging/homebrew/: desktop-waifu.rb
packaging/nix/: default.nix
public/: assets
public/Stylized Miku/: UNITY INSTRUCTIONS.txt
public/Stylized Miku/Model/: Leek.fbx  Mic.fbx
public/animations/: Arm Stretching.vrma  Cross Jumps.vrma  Dwarf Idle.vrma  Female Standing Pose.vrma  Femme Peek Around Corner.vrma  Joyful Jump.vrma  Running.vrma  Situp To Idle.vrma  Situps.vrma  Spinning.vrma  Stroke Shaking Head.vrma  neutral_idle.vrma  talking.vrma  talking_on_phone.vrma  thinking.vrma
public/characters/: grace.vrm  vroid_model.vrm
scripts/: bump-and-publish.sh  bump-version.sh  publish-aur.sh  publish-homebrew.sh  setup-hotkey.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/overlay/: macos.rs  mod.rs  wayland.rs  windows.rs  x11.rs
src/characters/: index.ts
src/characters/miku/: config.ts  prompt.ts
src/characters/vroid/: config.ts  prompt.ts
src/components/character/: CharacterCanvas.tsx  CharacterModel.tsx  index.ts
src/components/chat/: ChatPanel.tsx  CommandApproval.tsx  CommandOutput.tsx  CommandSuggestions.tsx  InputArea.tsx  MessageList.tsx  index.ts
src/components/ui/: SettingsModal.tsx  SlidingPanel.tsx  TitleBar.tsx  index.ts
src/hooks/: useWindowFocus.ts
src/lib/: debug.ts  export.ts  image.ts  platform.ts
src/lib/commands/: handlers.ts  index.ts  parser.ts  types.ts
src/lib/llm/: index.ts
src/lib/llm/providers/: anthropic.ts  base.ts  gemini.ts  openai.ts
src/lib/personalities/: base-prompt.ts  detail-prompts.ts  emotion-prompt.ts  index.ts  types.ts
src/lib/personalities/definitions/: assistant.ts  creative-partner.ts  friend.ts  life-coach.ts  naive-girlfriend.ts  smart-girlfriend.ts  tutor.ts
src/store/: index.ts
src/types/: index.ts
