[package]
name = "desktop-waifu"
version = "0.2.1"
edition = "2024"
description = "Animated 3D VRM characters with AI-powered conversational chat - Wayland overlay"
license = "MIT"
authors = ["yv-was-taken <yvmail@proton.me>"]
repository = "https://github.com/yv-was-taken/desktop-waifu"
homepage = "https://github.com/yv-was-taken/desktop-waifu"
keywords = ["desktop-pet", "vtuber", "vrm", "ai", "wayland"]
categories = ["games"]
readme = "../README.md"

[[bin]]
name = "desktop-waifu-overlay"
path = "src/main.rs"

[dependencies]
# GTK4 ecosystem
gtk4 = { version = "0.10", features = ["v4_10"] }
gtk4-layer-shell = "0.7"
webkit6 = "0.5"
cairo-rs = { version = "0.21", features = ["v1_16"] }

# IPC
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "macros", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System
libc = "0.2"

# Utils
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# System tray (StatusNotifierItem protocol)
ksni = "0.2"

# Desktop notifications (cross-platform: Linux, macOS, Windows)
notify-rust = "4"

# Static file server for production mode
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }

# Base64 encoding for file dialog
base64 = "0.22"
