[package]
name = "desktop-waifu-tauri"
version = "0.1.1"
description = "Animated 3D VRM characters with AI-powered conversational chat - Tauri app"
authors = ["yv-was-taken <yvmail@proton.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/yv-was-taken/desktop-waifu"
homepage = "https://github.com/yv-was-taken/desktop-waifu"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_waifu_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util"] }

